--- a/style.css
+++ b/style.css
@@ -26,12 +26,18 @@ h1, h2, h3, p, a, li, button{
   --color-orange: #bc6c25;
 }
 
+/* Nav */
+.hamburger-button{
+    display: flex;
+    margin-left: auto;
+    width: clamp(4rem, 20%, 5rem);
+}
 
+.close-button{
+    display: none;
+}
 
-
-/* --------------IMAGE HEADSHOT WORK IN PROGRESS----------------------- */
-
-
+/* Image Headshot */
 #image-wrapper{
   position: relative;
   width: 250px;
@@ -39,36 +45,29 @@ h1, h2, h3, p, a, li, button{
   border-radius: 50%;
   border: solid var(--color-orange), 12px;
   overflow: hidden;
-  transition: transform 0.4s ease;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 5rem;
+  margin-top: 2rem;
+  transition: transform 0.4s ease;
 }
 
 #image-wrapper img {
     width: 120%;
+    height: auto;               
     top: 85%;
     left: 50%;
-    height: auto;               
     transform: translate(-50%, -50%);
     object-fit: cover;
-    object-position: top;
-    
     transition: all 0.5s ease;
 }
 
 #image-wrapper:hover {
-   transform: scale(1.1);
+   transform: scale(1.2);
 }
 
 .headshot{
     position: absolute;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: opacity 0.4s ease;
 }
 
 .headshot.hover{
@@ -76,30 +75,15 @@ h1, h2, h3, p, a, li, button{
     z-index: 2;
 }
 
-#image-wrapper:hover .headshot.hover{
-    opacity: 1;
-}
-
 #image-wrapper:hover .headshot:default{
     opacity: 0;
 }
 
+#image-wrapper:hover .headshot.hover{
+    opacity: 1;
+}
 
-/* ------------------------------------- */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* Buttons */
 .button{
     background-color: transparent;
     outline: none;
@@ -111,11 +95,32 @@ h1, h2, h3, p, a, li, button{
     background-color: var(--color-text);
     color: var(--color-background);
 }
-
-#social-links{
+/* Links */
+.social-links{
     display: flex;
-    justify-content: end;
-    align-items: end;
     gap: 1.5em;
-    padding-top: 3rem;
+}
+
+/* small devices (phones, 600px and down) */
+@media only screen and (max-width: 768px) {
+    .small-hide{
+        display: none;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .large-hide{
+        display: none;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
 }
