--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ h2{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* margin-left: 3rem; */    
+    margin-left: 3rem;    
 }
 
 .contact-title{
@@ -197,7 +197,7 @@ h2{
 }
 
 .contact-subheading{
-    margin: 1.5rem 0 1.5rem 0;
+    margin: 2rem 0 2rem 0;
     font-weight: 200;
     font-size: 2rem;
 }
