--- a/style.css
+++ b/style.css
@@ -184,12 +184,14 @@ h2{
 
 #contact-wrapper{
     min-height: 100vh;
-    width: 80vw;
+    width: 90vw;
     font-size: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
     margin-left: 3rem;    
+    overflow: hidden;
 }
 
 .contact-title{
@@ -207,12 +209,31 @@ h2{
     line-height: 3rem;
 }
 
+/* blob */
+
+.svg-blob{
+    position: absolute;
+    bottom: -12%;
+    right: -75%;
+    width: 200%;
+    max-width: 900px;
+    height: auto;
+    transform: rotate(0.8turn);
+    z-index: -1;
+}   
 
 /* small devices (phones, 600px and down) */
 @media only screen and (min-width: 600px) {
     #contact-wrapper{
         margin-left: 10%;
         font-size: 2rem;
+    }
+
+    .svg-blob{
+        right: -55%;
+        bottom: -20%;
+        width: 150%;
+        max-width: 1100px;
     }
 }
 
