--- a/style.css
+++ b/style.css
@@ -250,6 +250,12 @@ h2{
         width: 150%;
         max-width: 1100px;
     }
+
+    #portfolio-wrapper{
+        max-width: 70%;
+        display: block;
+        margin: 5rem auto 5rem auto;
+    }
 }
 
 @media only screen and (max-width: 992px) {
@@ -356,7 +362,6 @@ h2{
 
      #portfolio-wrapper{
         min-height: 100vh;
-        margin: 3rem 10rem 3rem 10rem
     }
      
     /* About */
@@ -396,7 +401,7 @@ h2{
 
     #portfolio-wrapper{
         min-height: 100vh;
-        margin: 3rem 15rem 0 15rem
+        max-width: 50%;
     }
 
      #about-wrapper{
